--- a/config.yml
+++ b/config.yml
@@ -1,30 +1,16 @@
 baseurl: "/"
-title: "universal"
+title: "Universal"
 main_js: "assets/js/main.js"
 params:
-  palette: blue
-  palettes:
-    blue:
-      sass:
-        accent: "#3eb2fd"
-    green:
-      sass:
-        accent: "#31fd9c"
+  palette: "#3eb2fd"
+  footer_link: https://www.stackbit.com
+  show_social_media_links: true
 menus:
   main:
-    - identifier: submenu
-      title: Submenu
-      weight: 3
-      url: "#"
-  submenu:
-    - identifier: option1
-      title: Option One
+    - identifier: home
       weight: 1
-      url: "#"
-    - identifier: option2
-      title: Option Two
-      weight: 2
-      url: "#"
+      url: index.html
+      title: Home
 sass:
   input_file: sass/main.scss.njk
   output_file: assets/css/main.css
