--- a/stackbit.yml
+++ b/stackbit.yml
@@ -13,44 +13,27 @@ models:
     type: config
     label: Global Site Config
     fields:
-      - type: enum
-        name: palette
-        label: Color Palette
-        description: The color palette of the theme.
-        options:
-          - blue
-          - green
-        default: blue
-      - type: object
-        name: palettes
-        label: Palettes
-        hidden: true
-        fields:
-          - type: palette
-            name: blue
-            label: Blue
-          - type: palette
-            name: green
-            label: Green
-  header:
-    type: data
-    file: header.yml
-    label: Header
-    fields:
       - type: string
-        name: title
-        label: Title
-        description: The title displayed in the site header.
+        name: primary_color
+        label: Primary Color
+        description: The primary color palette of the theme.
+        default: "#3eb2fd"
       - type: string
-        name: tagline
-        label: Tagline
-        description: The tagline displayed in the site header.
+        name: footer_link
+        label: Footer Link
+        description: link in the footer
+        default: https://www.stackbit.com
+      - type: boolean
+        name: show_social_media_links
+        label: Show Social Media Links
+        description: Show or hide the social media links in the footer
+        default: true
   home:
     type: page
     label: Home
     template: home
     file: index.md
-    hideContent: true
+    hideContent: false
     singleInstance: true
     fields:
       - type: string
@@ -58,154 +41,64 @@ models:
         label: Title
         description: The title of the page.
         required: true
+      - type: string
+        name: heading
+        label: Heading
+        description: The heading displayed on the homepage
+  social:
+    type: data
+    file: social.json
+    label: Social Links
+    fields:
       - type: list
-        name: sections
-        label: Sections
-        description: Homepage sections.
+        name: links
+        label: Social Links
+        description: A list of social links displayed in the footer.
         items:
-          type: reference
+          type: object
           labelField: title
-          models:
-            - contentblock
-            - postsblock
-  blog:
+          fields:
+            - type: string
+              name: type
+              label: Type
+              hidden: true
+            - type: string
+              name: title
+              label: Title
+              required: true
+            - type: string
+              name: url
+              label: URL
+              widget: url
+              required: true
+  feature:
     type: page
-    label: Blog
-    template: blog
-    file: blog/index.md
-    hideContent: true
-    singleInstance: true
+    label: Feature
+    template: feature
+    folder: features
     fields:
       - type: string
         name: title
         label: Title
         description: The title of the page.
         required: true
-  page:
+      - type: string
+        name: description
+        label: Description
+        description: The text shown just below the features title.
+      - type: image
+        name: image_thumbnail
+        label: Thumbnail Image
+        description: The image shown in the feature.
+  features:
     type: page
-    label: Page
-    template: page
-    exclude: posts/**
+    label: Features
+    template: features
     fields:
       - type: string
         name: title
         label: Title
         description: The title of the page.
         required: true
-      - type: string
-        name: subtitle
-        label: Subtitle
-        description: The text shown just below the page title.
-      - type: image
-        name: img_path
-        label: Image
-        description: The featured image of the page.
-  post:
-    type: page
-    label: Post
-    template: post
-    folder: posts
-    fields:
-      - type: string
-        name: title
-        label: Title
-        description: The title of the post.
-        required: true
-      - type: string
-        name: subtitle
-        label: Subtitle
-        description: The text shown just below the post title.
-      - type: date
-        name: date
-        label: Date
-        required: true
-      - type: image
-        name: thumb_img_path
-        label: Image
-        description: The featured image shown in the blog feed.
-      - type: image
-        name: content_img_path
-        label: Alternative Image
-        description: The featured image shown in the single post.
-      - type: string
-        name: excerpt
-        label: Excerpt
-        description: The excerpt of the post displayed in the blog feed.
-  section:
-    type: object
-    label: Section
-    labelField: title
-    fields:
-      - type: string
-        name: title
-        label: Title
-        required: true
-        description: The title of the section.
-      - type: string
-        name: section_id
-        label: Section ID
-        required: true
-      - type: list
-        name: actions
-        label: Action Buttons
-        items:
-          type: action
-      - type: string
-        name: component
-        label: Component
-        required: true
-        hidden: true
-  contentblock:
-    type: object
-    label: Content Section with Optional Image
-    extends:
-      - section
-    fields:
-      - name: component
-        default: content_block.html
-      - type: image
-        name: image
-        label: Image
-        description: The image displayed above the section title.
-      - type: markdown
-        name: content
-        label: Content
-        description: The text content of the section.
-  postsblock:
-    type: object
-    label: Posts List
-    extends:
-      - section
-    fields:
-      - name: component
-        default: posts_block.html
-      - type: number
-        name: num_posts_displayed
-        label: Number of posts to display
-        required: true
-  action:
-    type: object
-    label: Action
-    labelField: label
-    fields:
-      - type: string
-        name: label
-        label: Label
-        required: true
-        description: The text displayed inside the button.
-      - type: string
-        name: url
-        label: URL
-        description: The URL of the button.
-        widget: url
-  palette:
-    type: object
-    label: Palette
-    fields:
-      - type: object
-        name: sass
-        label: SASS
-        fields:
-          - type: color
-            name: accent
-            label: Accent
+     
+   
