update stackbit.yml => stackbit.yaml and add pagesDir and staticDir

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -55,7 +55,7 @@ models:
   links:
     type: data
     file: links.json
-    label: Supported Platforms 
+    label: Supported Platforms
     fields:
       - type: list
         name: ssg
@@ -139,7 +139,9 @@ models:
         description: The title of the page.
         required: true
 stackbit_banner:
-  show_banner: true
+  show_banner: false
   name: Universal
-  create_url: 'https://app.stackbit.com/wizard?theme=universal'
+  create_url: 'https://app.stackbit.com/create?theme=universal'
   github_url: 'https://github.com/stackbithq/stackbit-theme-universal'
+pagesDir: content
+staticDir: static
